# testing-robocop-integration

./: .gitignore  .pre-commit-config.yaml  .robocop  .sarif.json  pyproject.toml  report.html
.github/: robocop.yaml
.github/workflows/: hello.yaml  nightly_run.yaml  robocop.yaml
Keywords/: CreateAnAccountKeywords.robot  LaunchApplication.robot  SearchKeywords.robot
Objects/Locators/: CreateAnAccountLocators.robot  SearchLocators.robot
TestData/: CreateAnAccountData.robot  SearchData.robot  TestConfig.robot
TestSuite/: CreateAnAccountTest.robot  SearchTest.robot
docs/: robocop.md  robotidy.md
results/: log.html  output.xml  report.html
